java script basic assignment

--- a/index.html
+++ b/index.html
@@ -11,3 +11,32 @@
     <script src="main.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Basics Assignment</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>JavaScript Basics Assignment</h1>
+    
+    <section id="data-types">
+        <h2>Part 1: Data Types</h2>
+        <p>Check the console for results.</p>
+    </section>
+
+    <section id="arrays">
+        <h2>Part 2: Arrays</h2>
+        <!-- Content for arrays will go here -->
+    </section>
+
+    <section id="functions">
+        <h2>Part 3: Functions</h2>
+        <!-- Content for functions will go here -->
+    </section>
+    
+    <script src="main.js"></script>
+</body>
+</html>
